--- a/app/src/main/res/layout/actividad_crear_grupo.xml
+++ b/app/src/main/res/layout/actividad_crear_grupo.xml
@@ -16,7 +16,7 @@
             android:id="@+id/toolbarCrearGrupo"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@android:color/holo_green_dark"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -74,6 +74,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="24dp"
+                android:backgroundTint="@android:color/holo_green_dark"
                 android:text="Crear Grupo"
                 android:textSize="18sp" />
 
