--- a/app/src/main/res/layout/actividad_enviar_archivo.xml
+++ b/app/src/main/res/layout/actividad_enviar_archivo.xml
@@ -16,7 +16,7 @@
             android:id="@+id/toolbarEnviarArchivo"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@android:color/holo_green_dark"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -85,9 +85,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="24dp"
+                android:backgroundTint="@android:color/holo_green_dark"
+                android:enabled="false"
                 android:text="Enviar"
-                android:textSize="18sp"
-                android:enabled="false" /> <!-- Deshabilitado hasta seleccionar archivo -->
+                android:textSize="18sp" /> <!-- Deshabilitado hasta seleccionar archivo -->
 
         </LinearLayout>
     </ScrollView>
