--- a/app/src/main/res/layout/actividad_inicio_sesion.xml
+++ b/app/src/main/res/layout/actividad_inicio_sesion.xml
@@ -11,14 +11,14 @@
         android:id="@+id/tituloInicioSesion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="160dp"
         android:text="Iniciar Sesión"
+        android:textColor="@color/black"
         android:textSize="32sp"
         android:textStyle="bold"
-        android:textColor="@color/black"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="60dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/layoutCorreoInicio"
@@ -62,32 +62,33 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginTop="24dp"
+        android:backgroundTint="@android:color/holo_green_dark"
         android:text="Iniciar Sesión"
         android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@id/layoutClaveInicio"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/layoutClaveInicio" />
 
     <TextView
         android:id="@+id/textoOlvideClave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Olvidaste tu contraseña?"
-        android:textColor="@color/design_default_color_primary"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/botonIniciarSesion"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:text="¿Olvidaste tu contraseña?"
+        android:textColor="@android:color/holo_green_dark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/botonIniciarSesion" />
 
     <TextView
         android:id="@+id/textoIrARegistro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿No tienes cuenta? Regístrate aquí"
-        android:textColor="@color/design_default_color_primary"
         android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@id/textoOlvideClave"
+        android:text="¿No tienes cuenta? Regístrate aquí"
+        android:textColor="@android:color/holo_green_dark"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/textoOlvideClave" />
 
     <ProgressBar
         android:id="@+id/barraProgresoInicio"
@@ -98,5 +99,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="175dp"
+        android:layout_height="138dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@drawable/uth" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
