--- a/app/src/main/res/layout/actividad_principal.xml
+++ b/app/src/main/res/layout/actividad_principal.xml
@@ -16,7 +16,7 @@
             android:id="@+id/toolbarPrincipal"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@android:color/holo_green_dark"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -37,9 +37,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
+        android:layout_margin="30dp"
         android:contentDescription="Enviar nuevo archivo"
         android:src="@drawable/outline_add_circle_24"
+        app:backgroundTint="@android:color/holo_green_dark"
         app:tint="@android:color/white" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
