--- a/app/src/main/res/layout/item_usuario_busqueda.xml
+++ b/app/src/main/res/layout/item_usuario_busqueda.xml
@@ -46,14 +46,17 @@
 
         <Button
             android:id="@+id/botonAgregarCompanero"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="@android:color/holo_green_dark"
             android:text="Agregar"
+            android:textColor="@color/white"
+            android:textColorLink="@color/white"
             app:icon="@drawable/ic_add"
-            style="@style/Widget.MaterialComponents.Button.TextButton"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
