--- a/app/src/main/res/layout/actividad_crear_grupo.xml
+++ b/app/src/main/res/layout/actividad_crear_grupo.xml
@@ -14,6 +14,7 @@
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbarCrearGrupo"
+            android:layout_marginTop="35dp"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@android:color/holo_green_dark"
