--- a/app/src/main/res/layout/actividad_enviar_archivo.xml
+++ b/app/src/main/res/layout/actividad_enviar_archivo.xml
@@ -15,6 +15,7 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbarEnviarArchivo"
             android:layout_width="match_parent"
+            android:layout_marginTop="35dp"
             android:layout_height="?attr/actionBarSize"
             android:background="@android:color/holo_green_dark"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
