--- a/app/src/main/res/menu/menu_principal.xml
+++ b/app/src/main/res/menu/menu_principal.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/menu_grupos"
-        android:title="Mis Grupos"
+        android:title="Crear Grupo"
         app:showAsAction="never" />
 
     <item
