Avance 8 - 19/11/2025 Solo falta revision

--- a/app/src/main/res/layout/actividad_busqueda.xml
+++ b/app/src/main/res/layout/actividad_busqueda.xml
@@ -14,16 +14,16 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbarBusqueda"
             android:layout_width="match_parent"
-            android:layout_marginTop="35dp"
             android:layout_height="?attr/actionBarSize"
-            android:background="@android:color/holo_green_dark"
+            android:layout_marginTop="35dp"
+            android:background="@android:color/holo_blue_dark"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
         <!-- SearchView irá aquí, debajo del Toolbar -->
         <androidx.appcompat.widget.SearchView
             android:id="@+id/searchViewUsuarios"
             android:layout_width="match_parent"
-            android:layout_height="64dp"
+            android:layout_height="65dp"
             android:layout_margin="0dp"
             android:background="@drawable/abc_popup_background_mtrl_mult"
             app:defaultQueryHint="Buscar por correo @uth.hn"
