--- a/app/src/main/res/layout/actividad_crear_grupo.xml
+++ b/app/src/main/res/layout/actividad_crear_grupo.xml
@@ -14,10 +14,10 @@
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbarCrearGrupo"
-            android:layout_marginTop="35dp"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@android:color/holo_green_dark"
+            android:layout_marginTop="35dp"
+            android:background="@android:color/holo_blue_dark"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -75,7 +75,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="24dp"
-                android:backgroundTint="@android:color/holo_green_dark"
+                android:backgroundTint="@android:color/holo_blue_dark"
                 android:text="Crear Grupo"
                 android:textSize="18sp" />
 
