--- a/app/src/main/res/layout/actividad_enviar_archivo.xml
+++ b/app/src/main/res/layout/actividad_enviar_archivo.xml
@@ -15,9 +15,9 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbarEnviarArchivo"
             android:layout_width="match_parent"
-            android:layout_marginTop="35dp"
             android:layout_height="?attr/actionBarSize"
-            android:background="@android:color/holo_green_dark"
+            android:layout_marginTop="35dp"
+            android:background="@android:color/holo_blue_dark"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -86,7 +86,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="24dp"
-                android:backgroundTint="@android:color/holo_green_dark"
+                android:backgroundTint="@android:color/holo_blue_dark"
                 android:enabled="false"
                 android:text="Enviar"
                 android:textSize="18sp" /> <!-- Deshabilitado hasta seleccionar archivo -->
