--- a/app/src/main/res/layout/actividad_perfil_usuario.xml
+++ b/app/src/main/res/layout/actividad_perfil_usuario.xml
@@ -26,7 +26,7 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="24dp"
-        android:src="@drawable/outline_account_circle_24"
+        android:src="@drawable/ic_launcher_background"
         app:civ_border_color="#FF000000"
         app:civ_border_width="2dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -136,7 +136,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="8dp"
-            android:backgroundTint="@android:color/holo_green_dark"
+            android:backgroundTint="@android:color/holo_blue_dark"
             android:text="Elegir" />
     </LinearLayout>
 
@@ -146,7 +146,7 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="@android:color/holo_green_dark"
+        android:backgroundTint="@android:color/holo_blue_dark"
         android:text="Guardar Cambios"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
