--- a/app/src/main/res/layout/actividad_principal.xml
+++ b/app/src/main/res/layout/actividad_principal.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:layout_marginTop="35dp"
-            android:background="@android:color/holo_green_dark"
+            android:background="@android:color/holo_blue_dark"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -42,7 +42,7 @@
         android:layout_marginBottom="50dp"
         android:contentDescription="Enviar nuevo archivo"
         android:src="@drawable/outline_add_circle_24"
-        app:backgroundTint="@android:color/holo_green_dark"
+        app:backgroundTint="@android:color/holo_blue_dark"
         app:tint="@android:color/white" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
