--- a/app/src/main/res/layout/actividad_registro.xml
+++ b/app/src/main/res/layout/actividad_registro.xml
@@ -123,7 +123,7 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="@android:color/holo_green_dark"
+        android:backgroundTint="@android:color/holo_blue_dark"
         android:text="Registrarse"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -136,7 +136,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="¿Ya tienes cuenta? Inicia sesión"
-        android:textColor="@android:color/holo_green_dark"
+        android:textColor="@android:color/holo_blue_dark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/botonRegistrar" />
