--- a/app/src/main/res/layout/item_archivo_feed.xml
+++ b/app/src/main/res/layout/item_archivo_feed.xml
@@ -80,10 +80,10 @@
             android:id="@+id/layoutArchivoGenerico"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/material_dynamic_primary70"
+            android:gravity="center_vertical"
             android:orientation="horizontal"
             android:padding="16dp"
-            android:background="#F5F5F5"
-            android:gravity="center_vertical"
             android:visibility="gone"
             tools:visibility="visible">
 
@@ -98,10 +98,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:textColor="@color/black"
-                tools:text="NombreDelArchivo.pdf"/>
+                tools:text="NombreDelArchivo.pdf" />
 
         </LinearLayout>
 
