--- a/app/src/main/res/layout/item_grupo.xml
+++ b/app/src/main/res/layout/item_grupo.xml
@@ -19,9 +19,9 @@
             android:id="@+id/imagenGrupoItem"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:src="@drawable/ic_profile_placeholder"
-            app:civ_border_width="1dp"
-            app:civ_border_color="#CCCCCC"/>
+            android:src="@drawable/rounded_contacts_product_24"
+            app:civ_border_color="#CCCCCC"
+            app:civ_border_width="1dp" />
 
         <LinearLayout
             android:layout_width="0dp"
