--- a/app/src/main/res/layout/item_usuario_busqueda.xml
+++ b/app/src/main/res/layout/item_usuario_busqueda.xml
@@ -16,7 +16,7 @@
             android:id="@+id/imagenPerfilUsuario"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/ic_profile_placeholder"
+            android:src="@drawable/rounded_account_circle_24"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -49,7 +49,7 @@
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="@android:color/holo_green_dark"
+            android:backgroundTint="@android:color/holo_blue_dark"
             android:text="Agregar"
             android:textColor="@color/white"
             android:textColorLink="@color/white"
