--- a/app/src/main/res/layout/actividad_detalle_grupo.xml
+++ b/app/src/main/res/layout/actividad_detalle_grupo.xml
@@ -8,6 +8,7 @@
     tools:context=".ActividadDetalleGrupo">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
@@ -17,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:layout_marginTop="35dp"
-            android:background="@android:color/holo_blue_dark"
+            android:background="@color/COLORUTH"
             app:popupTheme="@style/Theme.AppCompat.Light" />
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -28,7 +29,20 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <!-- Mensaje por si no hay archivos -->
+        <TextView
+            android:id="@+id/textoNombresMiembros"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@color/VERDEUTH"
+            android:padding="12dp"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Miembros: " />
+
+
         <TextView
             android:id="@+id/textoSinArchivos"
             android:layout_width="wrap_content"
@@ -41,15 +55,18 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/textoNombresMiembros" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/listaArchivosGrupo"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:padding="8dp"
-            tools:layout_editor_absoluteX="5dp"
-            tools:layout_editor_absoluteY="-1dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:background="@drawable/imagen_fondo"
+            app:layout_constraintTop_toBottomOf="@+id/textoNombresMiembros" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -61,6 +78,6 @@
         android:layout_margin="16dp"
         android:contentDescription="Subir Archivo"
         android:src="@drawable/rounded_arrow_warm_up_24"
-        app:backgroundTint="@android:color/holo_blue_dark" />
+        app:backgroundTint="@color/VERDEUTH" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
