--- a/app/src/main/res/layout/actividad_principal.xml
+++ b/app/src/main/res/layout/actividad_principal.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/imagen_fondo"
     tools:context=".ActividadPrincipal">
 
-    <!-- AppBar (Barra superior) -->
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,22 +17,18 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:layout_marginTop="35dp"
-            android:background="@android:color/holo_blue_dark"
+            android:background="@color/COLORUTH"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <!-- Contenido Principal (Feed) -->
-    <!-- REQUERIMIENTO: Interfaz tipo scroll-down -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listaFeedArchivos"
         android:layout_width="match_parent"
         android:layout_height="667dp"
         android:padding="8dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-    <!-- tools:listitem="@layout/item_archivo_feed" /> -->
 
-    <!-- Botón Flotante para agregar nuevos archivos -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/botonFlotanteAgregar"
         android:layout_width="wrap_content"
@@ -42,7 +38,7 @@
         android:layout_marginBottom="50dp"
         android:contentDescription="Enviar nuevo archivo"
         android:src="@drawable/outline_add_circle_24"
-        app:backgroundTint="@android:color/holo_blue_dark"
+        app:backgroundTint="@color/VERDEUTH"
         app:tint="@android:color/white" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
