--- a/app/src/main/res/layout/actividad_inicio_sesion.xml
+++ b/app/src/main/res/layout/actividad_inicio_sesion.xml
@@ -5,20 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="24dp"
+    android:background="@drawable/imagen_fondo"
     tools:context=".ActividadInicioSesion">
 
     <TextView
         android:id="@+id/tituloInicioSesion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="160dp"
+        android:layout_margin="20dp"
+        android:layout_marginTop="44dp"
         android:text="Iniciar Sesión"
-        android:textColor="@color/black"
+        android:textColor="@color/COLORUTH"
         android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imagen_portada" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/layoutCorreoInicio"
@@ -35,7 +38,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Correo Institucional (ej: nombre@uth.hn)"
-            android:inputType="textEmailAddress" />
+            android:inputType="textEmailAddress"/>
+
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -62,7 +66,7 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="@android:color/holo_blue_dark"
+        android:backgroundTint="@color/COLORUTH"
         android:text="Iniciar Sesión"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -75,7 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="¿Olvidaste tu contraseña?"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="@color/COLORUTH"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/botonIniciarSesion" />
 
@@ -85,7 +89,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="¿No tienes cuenta? Regístrate aquí"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="@color/COLORUTH"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textoOlvideClave" />
@@ -101,13 +105,18 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="175dp"
-        android:layout_height="138dp"
+        android:id="@+id/imagen_portada"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginTop="20dp"
+
+        android:contentDescription="Logo de la aplicación"
+
+        android:elevation="50dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/uth"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/uth" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
