--- a/app/src/main/res/layout/actividad_registro.xml
+++ b/app/src/main/res/layout/actividad_registro.xml
@@ -4,23 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/imagen_fondo"
     android:padding="24dp"
+
     tools:context=".ActividadRegistro">
 
     <TextView
         android:id="@+id/tituloRegistro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:text="Crear Cuenta"
+        android:textColor="@color/COLORUTH"
         android:textSize="32sp"
         android:textStyle="bold"
-        android:textColor="@color/black"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="40dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Nombre Completo -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/layoutNombreCompleto"
         android:layout_width="0dp"
@@ -39,7 +40,6 @@
             android:inputType="textPersonName" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!-- Correo -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/layoutCorreoRegistro"
         android:layout_width="0dp"
@@ -58,7 +58,6 @@
             android:inputType="textEmailAddress" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!-- Carrera -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/layoutCarrera"
         android:layout_width="0dp"
@@ -77,7 +76,6 @@
             android:inputType="textCapWords" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!-- Contraseña -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/layoutClaveRegistro"
         android:layout_width="0dp"
@@ -97,7 +95,6 @@
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!-- Confirmar Contraseña -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/layoutConfirmarClave"
         android:layout_width="0dp"
@@ -123,7 +120,7 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="@android:color/holo_blue_dark"
+        android:backgroundTint="@color/COLORUTH"
         android:text="Registrarse"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -136,7 +133,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="¿Ya tienes cuenta? Inicia sesión"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="@color/COLORUTH"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/botonRegistrar" />
