--- a/app/src/main/res/layout/item_archivo_feed.xml
+++ b/app/src/main/res/layout/item_archivo_feed.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Layout para un item en el feed principal -->
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -12,7 +11,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!-- Cabecera del Post -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -24,7 +22,7 @@
                 android:id="@+id/imagenPerfilFeed"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_profile_placeholder"/>
+                android:src="@drawable/outline_account_circle_24" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -62,8 +60,6 @@
 
         </LinearLayout>
 
-        <!-- Contenido (Imagen) -->
-        <!-- REQUERIMIENTO: Visualización de archivos -->
         <ImageView
             android:id="@+id/imagenContenidoFeed"
             android:layout_width="match_parent"
@@ -75,12 +71,11 @@
             tools:src="@tools:sample/backgrounds/scenic"
             tools:visibility="visible"/>
 
-        <!-- Contenido (Archivo tipo PDF/Video) -->
         <LinearLayout
             android:id="@+id/layoutArchivoGenerico"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/material_dynamic_primary70"
+            android:background="@color/VERDEUTH"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:padding="16dp"
