--- a/app/src/main/res/layout/actividad_enviar_archivo.xml
+++ b/app/src/main/res/layout/actividad_enviar_archivo.xml
@@ -88,6 +88,7 @@
                 android:backgroundTint="@color/COLORUTH"
                 android:enabled="false"
                 android:text="Enviar"
+                android:textColor="@color/white"
                 android:textSize="18sp" />
         </LinearLayout>
     </ScrollView>
